# rtsp-proxy-server-service

./: .gitignore  Cargo.toml  README.md  build.rs  rtsp-proxy.service
.cargo/: config.toml
src/: embedded.rs  main.rs  rtsp_client.rs  stream_manager.rs  streaming_server.rs
src/gui/: mod.rs
src/gui/components/: constants.rs  gradient_button.rs  mod.rs  text_field.rs
src/gui/imgui/: imgui_capi.cpp  imgui_ffi.rs  mod.rs
src/service/: mod.rs
src/shared/: logger.rs
