[package]
name = "rtsp-proxy"
version = "0.1.0"
edition = "2021"

# This will hide the console window when launched as a GUI
# (add #![windows_subsystem = "windows"] to main.rs)

[build-dependencies]
cc = "1"
winres = "0.1"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
bytes = "1.5"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
quick-xml = "0.31"
once_cell = "1.19"
dirs = "5.0" 
log = "0.4"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_System_Time",
    "Win32_System_RemoteDesktop",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
]